@@ -3,6 +3,9 @@
 	- comment missing from results page when searching fixed (#3480282)
 	- displaying multiline comments correctly in search result list
 	- tb size unit display at search dialog added
+	- mediainfo/lib7zip build fixes
+	- typo fixed
+	- display supported archive extensions if lib7zip is disabled fixed
 
 28. Jan 2012 Christoph Thielecke <crissi99@gmx.de>
 	- content at comment widget display fix
